--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:layout="http://www.w3.org/1999/xhtml" layout:decorate="layout/layout"
-      lang="en">
+      lang="en" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+>
 <head>
     <style>
 
@@ -155,7 +156,7 @@
 
                 </script>
             </ul>
-            <ul class="nav nav-tabs nav-tabs-bordered" id="issueTableNav">
+            <ul class="nav nav-tabs nav-tabs-bordered" id="issueTableNav" sec:authorize="hasAnyRole('PMO','SDQC')">
                 <li class="nav-item">
                     <button
                             class="nav-link position-relative btn-light active"
