add noti sound for all noti and add toasts for all noti

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -31,6 +31,12 @@
                 ">
         <div th:replace="fragments/navigation :: navigation-without-search"></div>
 
+        <div class="toast-container position-fixed p-3 end-0 bottom-0 " id="toasts-noti-container" style="z-index: 99;">
+            <!-- Then put toasts within -->
+            
+            
+        </div>
+
         <div class="container-fluid pt-4 px-4">
             <div class="row g-4">
 
