--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -34,6 +34,12 @@
                     ); background-size: 12px 12px;">
         <div th:replace="fragments/navigation :: navigation-without-search"></div>
 
+        <div class="toast-container position-fixed p-3 end-0 bottom-0 " id="toasts-noti-container" style="z-index: 99;">
+            <!-- Then put toasts within -->
+            
+            
+        </div>
+
         <div class="container-fluid mt-2">
             <!-- nav for task and gantt chart start -->
             <nav class="d-flex justify-content-between align-items-center" id="nav-container">
