--- a/src/main/resources/templates/department.html
+++ b/src/main/resources/templates/department.html
@@ -319,6 +319,12 @@
                 ">
         <!-- Navbar Start -->
         <div th:replace="fragments/navigation :: navigation-without-search"></div>
+
+        <div class="toast-container position-fixed p-3 end-0 bottom-0 " id="toasts-noti-container" style="z-index: 99;">
+            <!-- Then put toasts within -->
+            
+            
+        </div>
         <!-- Navbar End -->
 
         <!-- Search Start -->
