--- a/src/main/resources/templates/employees.html
+++ b/src/main/resources/templates/employees.html
@@ -29,7 +29,11 @@
                 ">
         <div th:replace="fragments/navigation :: navigation-without-search"></div>
 
-
+        <div class="toast-container position-fixed p-3 end-0 bottom-0 " id="toasts-noti-container" style="z-index: 99;">
+            <!-- Then put toasts within -->
+            
+            
+        </div>
         <div class="container-fluid">
             <div id="toolbar"
                  class="ms-3">
