--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -2324,6 +2324,13 @@
             >
 
                 <div th:replace="~{fragments/navigation :: navigation-without-search}"></div>
+
+                <div class="toast-container position-fixed p-3 end-0 bottom-0 " id="toasts-noti-container" style="z-index: 99;">
+                    <!-- Then put toasts within -->
+                    
+                    
+                </div>
+
                 <!-- Search Start -->
                 <div class="container-fluid pt-2 ps-s pe-2" id="dropdrown-search-bar">
                     <div class="d-flex flex-row justify-content-end gap-2">
